fix: resolve broken image links in documentation
- Fixed broken link to plan mode selector image (use plan-mode-selector.png)
- Fixed broken link to assistant extension selector image
- Removed broken link to non-existent /features/plan/how-to-customize page

--- a/docs/hub/assistants/use-an-assistant.mdx
+++ b/docs/hub/assistants/use-an-assistant.mdx
@@ -16,4 +16,4 @@ After saving, open your IDE extension and:
 - Select the assistant from the **assistant dropdown** in the Continue extension.
 - Begin using it for chat, code generation, or other configured capabilities.
 
-[Extension Assistant Selector](/images/assistant-extension-select-319492a06d6249e5389747687341dfdb.png)
+![Extension Assistant Selector](/images/hub/assistants/images/assistant-extension-select.png)
