Remove line reference

--- a/docs/features/autocomplete/next-edit.mdx
+++ b/docs/features/autocomplete/next-edit.mdx
@@ -95,7 +95,7 @@ Next Edit requires:
 
 <Step title="Review Predictions">
   When Next Edit activates, you'll see a diff overlay showing predicted changes
-  in an editable region (±5 lines from your cursor).
+  in an editable region.
 </Step>
 
 <Step title="Accept or Reject">
