feat: next edit docs (#7180)
* Add Next Edit to docs

* Add callout to edit page to mention next-edit

* Add Next Edit to model setup for edit

* Fix formatting

* Add image displaying models selection in VS Assistant

* Add image to show selecting model in autocomplete

* Add note about API keys

* Move info callout about next-edit to autocomplete

* Move Next-edit to autocomplete folder

* Move next-edit in sidebar

* Move image to autocomplete image folder

* Optimize model-setup and move next edit to autocomplete

* Remove line reference

--- a/docs/features/autocomplete/model-setup.mdx
+++ b/docs/features/autocomplete/model-setup.mdx
@@ -46,6 +46,16 @@ This model provides good suggestions while keeping your code completely private.
 2. Add [Qwen 2.5 Coder 1.5B](https://hub.continue.dev/ollama/qwen2.5-coder-1.5b) to your assistant on Continue Hub
 3. Click `Reload config` in the assistant selector in the Continue IDE extension
 
+## Next Edit Model
+
+For proactive code prediction that anticipates your next edit, Continue supports specialized [Next Edit](/features/edit/next-edit) models:
+
+**Supported Next Edit model:**
+
+- `mercury-coder-nextedit`: Primary model optimized for next edit prediction
+
+Next Edit automatically activates when you have a compatible model configured for autocomplete and the appropriate access permissions.
+
 ## Need Help?
 
 If you're not seeing any completions or need more detailed configuration options, check out our comprehensive [autocomplete deep dive guide](/customize/deep-dives/autocomplete).
