fix: link to recommendations

--- a/docs/features/autocomplete/model-setup.mdx
+++ b/docs/features/autocomplete/model-setup.mdx
@@ -6,6 +6,10 @@ sidebarTitle: "Recommended Autocomplete Models"
 
 Setting up the right model for autocomplete is crucial for a smooth coding experience. Here are our top recommendations:
 
+<Info>
+  For a complete comparison of all autocomplete models, see our [comprehensive model recommendations](/customization/models#recommended-models).
+</Info>
+
 ## Recommended Models for Autocomplete in Continue
 
 ### Hosted (Best Performance)
