--- a/docs/features/edit/model-setup.mdx
+++ b/docs/features/edit/model-setup.mdx
@@ -8,6 +8,10 @@ The model you set up for Chat mode will be used for Edit mode by default.
 
 The recommended models and how to set them up can be found [here](/features/chat/model-setup).
 
+<Info>
+  See our [comprehensive model recommendations](/customization/models#recommended-models) for the best models for each role, including Edit and Apply.
+</Info>
+
 ## How to Set Up an Apply Model
 
 We also recommend setting up an Apply model for the best Edit experience.
