--- a/docs/customize/deep-dives/autocomplete.mdx
+++ b/docs/customize/deep-dives/autocomplete.mdx
@@ -5,6 +5,10 @@ keywords: [autocomplete]
 sidebarTitle: Autocomplete
 ---
 
+<Info>
+  For a comprehensive comparison of all autocomplete models, see our [model recommendations table](/customization/models#recommended-models).
+</Info>
+
 ## How to Set Up Autocomplete in Continue with Codestral (Recommended)
 
 If you want to have the best autocomplete experience, we recommend using Codestral, which is available through the [Mistral API](https://console.mistral.ai/). To do this, obtain an API key and add it to your config:
