--- a/docs/customize/model-roles/autocomplete.mdx
+++ b/docs/customize/model-roles/autocomplete.mdx
@@ -12,7 +12,11 @@ In Continue, autocomplete models are used to display inline [Autocomplete](../..
 
 ## Recommended Autocomplete models
 
-Visit the [Autocomplete Deep Dive](../deep-dives/autocomplete) for recommended models and more details.
+<Info>
+  See our [comprehensive model recommendations](/customization/models#recommended-models) for the best autocomplete models, including both open and closed options.
+</Info>
+
+Visit the [Autocomplete Deep Dive](../deep-dives/autocomplete) for detailed setup instructions and configuration options.
 
 ## Prompt templating
 
