--- a/docs/customize/model-roles/chat.mdx
+++ b/docs/customize/model-roles/chat.mdx
@@ -11,24 +11,28 @@ In Continue, these models are used for normal [Chat](../../features/chat/quick-s
 
 ## Recommended Chat models
 
+<Info>
+  For the latest and most comprehensive model recommendations, see our [model recommendations table](/customization/models#recommended-models).
+</Info>
+
 ## Best overall experience
 
 For the best overall Chat experience, you will want to use a 400B+ parameter model or one of the frontier models.
 
-### Claude Sonnet 3.7 from Anthropic
+### Claude Opus 4.1 and Claude Sonnet 4 from Anthropic
 
-Our current top recommendation is Claude 3.7 Sonnet from [Anthropic](../model-providers/top-level/anthropic).
+Our current top recommendations are Claude Opus 4.1 and Claude Sonnet 4 from [Anthropic](../model-providers/top-level/anthropic).
 
 <Tabs>
   <Tab title="Hub">
-  View the [Claude 3.7 Sonnet model block](https://hub.continue.dev/anthropic/claude-3-7-sonnet) on the hub.
+  View the [Claude Opus 4.1 model block](https://hub.continue.dev/anthropic/claude-4-1-opus) or [Claude Sonnet 4 model block](https://hub.continue.dev/anthropic/claude-4-sonnet) on the hub.
   </Tab>
   <Tab title="YAML">
   ```yaml title="config.yaml"
   models:
-    - name: Claude 3.7 Sonnet
+    - name: Claude Opus 4.1
       provider: anthropic
-      model: claude-3-7-sonnet-latest
+      model: claude-4-1-opus
       apiKey: <YOUR_ANTHROPIC_API_KEY>
   ```
   </Tab>
@@ -37,9 +41,9 @@ Our current top recommendation is Claude 3.7 Sonnet from [Anthropic](../model-pr
   {
     "models": [
       {
-        "title": "Claude 3.5 Sonnet",
+        "title": "Claude Opus 4.1",
         "provider": "anthropic",
-        "model": "claude-3-5-sonnet-latest",
+        "model": "claude-4-1-opus",
         "apiKey": "<YOUR_ANTHROPIC_API_KEY>"
       }
     ]
