--- a/docs/features/chat/model-setup.mdx
+++ b/docs/features/chat/model-setup.mdx
@@ -3,6 +3,10 @@ The model you use for for Chat mode will be
 - used with Edit mode by default but can be switched
 - always used with Agent mode if the model supports tool calling
 
+<Info>
+  For a comprehensive comparison of all available models by role, see our [model recommendations table](/customization/models#recommended-models).
+</Info>
+
 ## What Models Are Recommended for Chat?
 
 Our strong recommendation is to use [Claude Sonnet 4](https://hub.continue.dev/anthropic/claude-4-sonnet) from Anthropic.
