Link to mercury coder in the hub

--- a/docs/features/autocomplete/next-edit.mdx
+++ b/docs/features/autocomplete/next-edit.mdx
@@ -4,9 +4,10 @@ description: "Learn how Continue's Next Edit feature predicts and suggests your 
 ---
 
 <Warning>
-  Next Edit is currently an experimental feature. It requires Mercury Coder
-  model configured in your Continue autocomplete settings and is not yet
-  available for JetBrains use.
+  Next Edit is currently an experimental feature. It requires [Mercury Coder
+  model](https://hub.continue.dev/inceptionlabs/mercury-coder) configured in
+  your Continue autocomplete settings and is not yet available for JetBrains
+  use.
 </Warning>
 
 ## What is Next Edit?
