--- a/docs/customize/context/documentation.mdx
+++ b/docs/customize/context/documentation.mdx
@@ -216,8 +216,8 @@ If your documentation is private, you can skip the default crawler and use a loc
   The default local crawler is a lightweight tool that cannot render sites that
   are dynamically generated using JavaScript. If your sites need to be rendered,
   you can enable the experimental `Use Chromium for Docs Crawling` feature from
-  your [User Settings Page](../settings) This will download and install Chromium
-  to `~/.continue/.utils`, and use it as the local crawler. **Note:** Chromium
+  your User Settings Page This will download and install Chromium to
+  `~/.continue/.utils`, and use it as the local crawler. **Note:** Chromium
   crawling support is being deprecated and may be removed in future versions.
 </Info>
 
@@ -405,4 +405,4 @@ The following configuration example includes:
   </Tab>
 </Tabs>
 
-This setup could also involve enabling Chromium as a backup for local documentation through the [User Settings Page](../settings).
+This setup could also involve enabling Chromium as a backup for local documentation through the User Settings.
