--- a/docs/customize/model-providers/top-level/inception.mdx
+++ b/docs/customize/model-providers/top-level/inception.mdx
@@ -1,7 +1,7 @@
 ---
 title: "How to Configure Inception with Continue"
 slug: ../inception
-description: "Configure Inception Labs models with Continue, featuring Mercury Coder Small for both chat and autocomplete functions, optimized for programming and code generation tasks"
+description: "Configure Inception models with Continue, featuring Mercury Coder Small for both chat and autocomplete functions, optimized for programming and code generation tasks"
 sidebarTitle: "Inception"
 ---
 
