Add link to recommended models documentation
Link 'Choose models based on your specific needs' section to the official recommended models documentation for additional model options and guidance.

--- a/docs/guides/ollama-guide.mdx
+++ b/docs/guides/ollama-guide.mdx
@@ -213,7 +213,7 @@ PARAMETER num_ctx 4096
 
 ### How to Choose the Right Model
 
-Choose models based on your specific needs:
+Choose models based on your specific needs (see [recommended models](https://docs.continue.dev/customization/models#recommended-models) for more options):
 
 1. **Code Generation**: 
    - `qwen2.5-coder:7b` - Excellent for code completion
